--- a/app/build.gradle
+++ b/app/build.gradle
@@ -180,6 +180,7 @@ dependencies {
     implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
     implementation "io.coil-kt:coil:0.11.0"
     implementation "io.github.wulkanowy:AppKillerManager:3.0.0"
+    implementation 'me.xdrop:fuzzywuzzy:1.3.1'
 
     playImplementation 'com.google.firebase:firebase-analytics:17.4.2'
     playImplementation 'com.google.firebase:firebase-inappmessaging-display-ktx:19.0.7'
